--- a/pom.xml
+++ b/pom.xml
@@ -237,31 +237,166 @@
 		<formats> <format>html</format> <format>xml</format> </formats> </configuration> 
 		</plugin> </plugins> </reporting> -->
 	<profiles>
-		<!--<profile>-->
-		<!--<id>dev</id>-->
-		<!--<properties>-->
-		<!--<profileActive>dev</profileActive>-->
-		<!--</properties>-->
-		<!--<activation>-->
-		<!--<activeByDefault>true</activeByDefault>-->
-		<!--</activation>-->
-		<!--</profile>-->
+        <profile>
+            <id>test2</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <build>
+                <resources>
+                    <resource>
+                        <directory>src/main/resources</directory>
+                        <excludes>
+							<exclude>bootstrap-dev.yml</exclude>
+							<exclude>bootstrap-test.yml</exclude>
+                            <exclude>bootstrap-prod.yml</exclude>
+                        </excludes>
+                    </resource>
+                </resources>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.gmaven</groupId>
+                        <artifactId>groovy-maven-plugin</artifactId>
+                        <version>2.0</version>
+                        <executions>
+                            <execution>
+                                <id>log_on_validate</id>
+                                <phase>validate</phase>
+                                <goals>
+                                    <goal>execute</goal>
+                                </goals>
+                                <configuration>
+                                    <source>                                         
+                                log.warn('###############################################')
+                                log.warn('########## BUILD USING test2 PROFILE ##########')
+                                log.warn('###############################################')
+                                    </source>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>log_on_package</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>execute</goal>
+                                </goals>
+                                <configuration>
+                                    <source>                                         
+                                log.warn('###############################################')
+                                log.warn('########## BUILD USING test2 PROFILE ##########')
+                                log.warn('###############################################')
+                                    </source>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
 		<profile>
-			<id>test</id>
-			<properties>
-				<profileActive>test</profileActive>
-			</properties>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
-		</profile>
-		<profile>
-			<id>prod</id>
-			<properties>
-				<profileActive>prod</profileActive>
-			</properties>
-		</profile>
-	</profiles>
+            <id>dev</id>
+            <build>
+                <resources>
+                    <resource>
+                        <directory>src/main/resources</directory>
+                        <excludes>
+							<exclude>bootstrap-test.yml</exclude>
+							<exclude>bootstrap-test2.yml</exclude>
+                            <exclude>bootstrap-prod.yml</exclude>
+                        </excludes>
+                    </resource>
+                </resources>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.gmaven</groupId>
+                        <artifactId>groovy-maven-plugin</artifactId>
+                        <version>2.0</version>
+                        <executions>
+                            <execution>
+                                <id>log_on_validate</id>
+                                <phase>validate</phase>
+                                <goals>
+                                    <goal>execute</goal>
+                                </goals>
+                                <configuration>
+                                    <source>                                         
+                                log.warn('###############################################')
+                                log.warn('########## BUILD USING dev PROFILE ##########')
+                                log.warn('###############################################')
+                                    </source>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>log_on_package</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>execute</goal>
+                                </goals>
+                                <configuration>
+                                    <source>                                         
+                                log.warn('###############################################')
+                                log.warn('########## BUILD USING dev PROFILE ##########')
+                                log.warn('###############################################')
+                                    </source>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>prod</id>
+            <build>
+                <resources>
+                    <resource>
+                        <directory>src/main/resources</directory>
+                        <excludes>
+							<exclude>bootstrap-dev.yml</exclude>
+							<exclude>bootstrap-test.yml</exclude>
+                            <exclude>bootstrap-test2.yml</exclude>
+                        </excludes>
+                    </resource>
+                </resources>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.gmaven</groupId>
+                        <artifactId>groovy-maven-plugin</artifactId>
+                        <version>2.0</version>
+                        <executions>
+                            <execution>
+                                <id>log_on_validate</id>
+                                <phase>validate</phase>
+                                <goals>
+                                    <goal>execute</goal>
+                                </goals>
+                                <configuration>
+                                    <source>                                         
+                                log.warn('###############################################')
+                                log.warn('########## BUILD USING prod PROFILE ##########')
+                                log.warn('###############################################')
+                                    </source>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>log_on_package</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>execute</goal>
+                                </goals>
+                                <configuration>
+                                    <source>                                         
+                                log.warn('###############################################')
+                                log.warn('########## BUILD USING prod PROFILE ##########')
+                                log.warn('###############################################')
+                                    </source>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 	<build>
 		<plugins>
 		<!-- <plugin>
